[package]
name = "ez-time"
version = "0.1.0"
edition = "2021"
authors = ["LeTurt"]
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/ez-time.rs"

[dependencies]
chrono = { version = "0.4.23", default-features = false }
cosmwasm-std = { version = "1.1.9", default-features = false }
schemars = "0.8.11"
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
